[package]
name = "easy_server"
version = "0.1.0"
authors = ["Camilo <camilomcatasus@gmail.com>"]
edition = "2021"

[dependencies]
clap = "4.5.20"
crossbeam = "0.8.4"
env_logger = "0.11.5"
futures-util = "0.3.30"
log = "0.4.22"
rand = "0.8.5"
tokio = {version = "1.40.0", default-features = false, features = ["io-std", "macros", "net", "rt-multi-thread", "time"] }
tokio-tungstenite = "0.23.1"
tungstenite = "0.24.0"
warp = "0.3.7"
